# iot-reference-arm-corstone3xx

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  manifest.yml
Projects/aws-iot-example/: CMakeLists.txt
Projects/aws-iot-example/provisioning/: CMakeLists.txt  generate_credentials_header.py
Projects/blinky/: CMakeLists.txt
Projects/helpers/provisioning/: CMakeLists.txt
applications/aws-iot-example/: CMakeLists.txt
applications/aws_iot_example/: CMakeLists.txt  main.c
applications/blinky/: CMakeLists.txt
applications/helpers/events/src/: events.c
applications/helpers/provisioning/: CMakeLists.txt
applications/keyword_detection/: CMakeLists.txt  blink_task.c  blink_task.h  dev_mode_key_provisioning.h  ethosu_platform_adaptation.c  main.c  ml_interface.cc  ml_interface.h
applications/keyword_detection/configs/app_config/: app_config.h
applications/keyword_detection/configs/freertos_config/: FreeRTOSIPConfig.h
applications/speech_recognition/: CMakeLists.txt  blink_task.c  blink_task.h  dsp_task.h  ethosu_platform_adaptation.c  main.c  ml_interface.cc  ml_interface.h
applications/speech_recognition/configs/app_config/: app_config.h
applications/speech_recognition/configs/tfm-config/: config_tfm_target.h
applications/speech_recognition/dsp/inc/: AppNodes.h  GenericNodes.h  dsp_interfaces.h  scheduler.h
applications/speech_recognition/dsp/src/: dsp_interfaces.cpp  dsp_task.cpp  scheduler.cpp
bsp/: CMakeLists.txt
bsp/cmake/: SetLinkerOptions.cmake
bsp/common/: bsp_serial.c  mps3_leds.c  mps3_leds.h
bsp/corstone310/: an555_ns.ld
bsp/corstone310/include/: FreeRTOSConfig_target.h
bsp/ethos-u55/an552/: ethos-u55.h
bsp/ethos-u55/an555/: ethos-u55.h
components/: CMakeLists.txt
components/ai/ml_embedded_evaluation_kit/: CMakeLists.txt
components/ai/ml_embedded_evaluation_kit/integration/: BuildMlEmbeddedEvaluationKit.cmake  CMakeLists.txt
components/ai/speexdsp/integration/inc/: config.h  os_support_custom.h  speexdsp_config_types.h
components/aws_iot/: CMakeLists.txt
components/aws_iot/cmake/: GenerateAWSUpdateDigestAndSignature.cmake
components/aws_iot/corejson/: CMakeLists.txt
components/aws_iot/coremqtt/: CMakeLists.txt
components/aws_iot/coremqtt/mocks/: CMakeLists.txt
components/aws_iot/coremqtt/mocks/inc/: core_mqtt.h  core_mqtt_serializer.h
components/aws_iot/coremqtt/mocks/src/: core_mqtt.c
components/aws_iot/coremqtt_agent/: CMakeLists.txt
components/aws_iot/coremqtt_agent/integration/: CMakeLists.txt
components/aws_iot/coremqtt_agent/integration/inc/: freertos_agent_message.h  freertos_command_pool.h  subscription_manager.h
components/aws_iot/coremqtt_agent/integration/src/: freertos_agent_message.c
components/aws_iot/coremqtt_agent/integration/tests/: CMakeLists.txt  test_freertos_agent_message.cpp
components/aws_iot/coremqtt_agent/mocks/: CMakeLists.txt
components/aws_iot/coremqtt_agent/mocks/inc/: core_mqtt_agent.h  core_mqtt_agent_message_interface.h  mqtt_agent_task.h  subscription_manager.h
components/aws_iot/coremqtt_agent/mocks/src/: core_mqtt_agent.c  subscription_manager.c
components/aws_iot/corepkcs11/: CMakeLists.txt
components/aws_iot/ota_for_aws_iot_embedded_sdk/: CMakeLists.txt
components/aws_iot/ota_for_aws_iot_embedded_sdk/integration/: CMakeLists.txt
components/aws_iot/ota_for_aws_iot_embedded_sdk/integration/inc/: ota_agent_task.h
components/aws_iot/ota_for_aws_iot_embedded_sdk/integration/src/: ota_agent_task.c
components/aws_iot/ota_for_aws_iot_embedded_sdk/integration/tests/: CMakeLists.txt  test_ota_agent_task.cpp
components/aws_iot/ota_for_aws_iot_embedded_sdk/mocks/: CMakeLists.txt
components/aws_iot/ota_for_aws_iot_embedded_sdk/mocks/inc/: app_config.h  demo_config.h  events.h  logging_stack.h  ota.h  ota_config.h  ota_http_interface.h  ota_mqtt_interface.h  ota_os_freertos.h  ota_os_interface.h  ota_pal.h  ota_platform_interface.h  ota_private.h
components/aws_iot/ota_for_aws_iot_embedded_sdk/mocks/src/: events.c  logging_stack.c  ota.c  ota_os_freertos.c  ota_pal.c
components/aws_iot/tinycbor/: CMakeLists.txt
components/connectivity/: CMakeLists.txt
components/connectivity/iot_vsocket/integration/src/: network_startup.c
components/freertos_kernel/: CMakeLists.txt
components/freertos_kernel/mocks/: CMakeLists.txt
components/freertos_kernel/mocks/inc/: FreeRTOS.h  FreeRTOSConfig.h  portmacro.h  projdefs.h  queue.h  semphr.h  task.h
components/freertos_kernel/mocks/src/: FreeRTOSConfig.c  queue.c  semphr.c  task.c
components/security/: CMakeLists.txt
components/security/freertos_ota_pal_psa/: CMakeLists.txt
components/security/freertos_ota_pal_psa/integration/: CMakeLists.txt
components/security/freertos_ota_pal_psa/mocks/: CMakeLists.txt
components/security/freertos_ota_pal_psa/mocks/inc/version/: application_version.h
components/security/freertos_ota_pal_psa/mocks/src/: application_version.c
components/security/freertos_pkcs11_psa/: CMakeLists.txt
components/security/freertos_pkcs11_psa/integration/: CMakeLists.txt
components/security/mbedtls/: CMakeLists.txt
components/security/trusted_firmware-m/: CMakeLists.txt
components/security/trusted_firmware-m/integration/: CMakeLists.txt
components/security/trusted_firmware-m/integration/cmake/: BuildTfm.cmake  MergeTfmImages.cmake  SignTfmImage.cmake
components/security/trusted_firmware-m/mocks/: CMakeLists.txt
components/security/trusted_firmware-m/mocks/inc/psa/: fwu_config.h  update.h
components/tools/: CMakeLists.txt
components/tools/fff/: CMakeLists.txt
components/tools/googletest/: CMakeLists.txt
docs/: keyword_detection.md  speech_recognition.md  unit_testing.md
release_changes/: 202311142025.change  202402270748.change
tools/ci/: pipeline-baseline-fri.yml
tools/cmake/: AddUnitTest.cmake
tools/scripts/: build.sh  run.sh  run_uncrustify.sh
tools/tests/: test_ota.py
